[package]
name = "node-bench"
version = "0.8.0-rc6"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate node integration benchmarks."
edition = "2018"
license = "GPL-3.0-or-later WITH Classgit-exception-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
node-primitives = { version = "2.0.0-rc6", path = "../primitives" }
node-testing = { version = "2.0.0-rc6", path = "../testing" }
node-runtime = { version = "2.0.0-rc6", path = "../../runtime" }
sc-cli = { version = "0.8.0-rc6", git = 'https://github.com/paritytech/substrate.git' }
sc-client-api = { version = "2.0.0-rc6", git = 'https://github.com/paritytech/substrate.git' }
sp-runtime = { version = "2.0.0-rc6", git = 'https://github.com/paritytech/substrate.git' }
sp-state-machine = { version = "0.8.0-rc6", git = 'https://github.com/paritytech/substrate.git'}
serde = "1.0.101"
serde_json = "1.0.41"
structopt = "0.3"
derive_more = "0.99.2"
kvdb = "0.7"
kvdb-rocksdb = "0.9.1"
sp-trie = { version = "2.0.0-rc6", git = 'https://github.com/paritytech/substrate.git'}
sp-core = { version = "2.0.0-rc6", git = 'https://github.com/paritytech/substrate.git' }
sp-consensus = { version = "0.8.0-rc6", git = 'https://github.com/paritytech/substrate.git'}
sp-transaction-pool = { version = "2.0.0-rc6", git ='https://github.com/paritytech/substrate.git' }
sc-basic-authorship = { version = "0.8.0-rc6", git = 'https://github.com/paritytech/substrate.git' }
sp-inherents = { version = "2.0.0-rc6", git = 'https://github.com/paritytech/substrate.git'}
sp-finality-tracker = { version = "2.0.0-rc6", default-features = false, git = 'https://github.com/paritytech/substrate.git' }
sp-timestamp = { version = "2.0.0-rc6", default-features = false, git = 'https://github.com/paritytech/substrate.git' }
sp-tracing = { version = "2.0.0-rc6", git = 'https://github.com/paritytech/substrate.git' }
hash-db = "0.15.2"
tempfile = "3.1.0"
fs_extra = "1"
hex = "0.4.0"
rand = { version = "0.7.2", features = ["small_rng"] }
lazy_static = "1.4.0"
parity-util-mem = { version = "0.7.0", default-features = false, features = ["primitive-types"] }
parity-db = { version = "0.1.2" }
sc-transaction-pool = { version = "2.0.0-rc6", git = 'https://github.com/paritytech/substrate.git'}
futures = { version = "0.3.4", features = ["thread-pool"] }
