[package]
name = "node-inspect"
version = "0.8.0-rc6"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4" }
derive_more = "0.99"
log = "0.4.8"
sc-cli = { version = "0.8.0-rc6", git = 'https://github.com/paritytech/substrate.git'}
sc-client-api = { version = "2.0.0-rc6", git = 'https://github.com/paritytech/substrate.git' }
sc-service = { version = "0.8.0-rc6", default-features = false, git = 'https://github.com/paritytech/substrate.git' }
sp-blockchain = { version = "2.0.0-rc6", git = 'https://github.com/paritytech/substrate.git' }
sp-core = { version = "2.0.0-rc6", git = 'https://github.com/paritytech/substrate.git' }
sp-runtime = { version = "2.0.0-rc6", git = 'https://github.com/paritytech/substrate.git' }
structopt = "0.3.8"
