[package]
name = "node-primitives"
version = "2.0.0-rc6"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
frame-system = { version = "2.0.0-rc6", default-features = false, git = 'https://github.com/paritytech/substrate.git' }
sp-application-crypto = { version = "2.0.0-rc6", default-features = false, git = 'https://github.com/paritytech/substrate.git' }
sp-core = { version = "2.0.0-rc6", default-features = false, git = 'https://github.com/paritytech/substrate.git' }
sp-runtime = { version = "2.0.0-rc6", default-features = false, git = 'https://github.com/paritytech/substrate.git' }

[dev-dependencies]
sp-serializer = { version = "2.0.0-rc6", git = 'https://github.com/paritytech/substrate.git' }
pretty_assertions = "0.6.1"

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-system/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-runtime/std",
]
